--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -14,6 +14,9 @@ html
 	body
 		canvas#canvas
 
+		script.
+			window.inputs = !{JSON.stringify(renderpass[0].inputs)}
+
 		script#vs(type='x-shader/x-vertex')
 			include pass.vert
 		script#fs(type='x-shader/x-fragment')
