--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -6,7 +6,7 @@ html
 		meta(name='description' content='ShaderStudio')
 		meta(name='renderer' content='webkit')
 		meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-		title ShaderStudio - #{info.id}
+		title ShaderStudio - #{info.name}
 		link(rel='stylesheet', href='/components/semantic/dist/semantic.min.css')
 		link(rel='stylesheet', href='/css/view.css')
 		link(rel='icon' href='/img/favicon.ico')
