add ace support

--- a/public/css/view.less
+++ b/public/css/view.less
@@ -17,6 +17,15 @@ canvas#canvas {
 	float: right;
 }
 
+#editor {
+	margin: 0;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
 #canvasWrapper {
 	border-radius: 0.5rem;
 	background-color: #0d3349;
