--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -54,6 +54,8 @@ html
 					.row Comments
 
 				.eight.wide.column#right
+					pre#editor
+						!{renderpass[0].code}
 
 		script#vs(type='x-shader/x-vertex')
 			include pass.vert
@@ -67,4 +69,5 @@ html
 		script(src='/components/jquery/dist/jquery.min.js')
 		script(src='/components/semantic/dist/semantic.min.js')
 		script(src='/components/twgl.js/dist/twgl.min.js')
+		script(src='/components/ace-builds/src-min/ace.js')
 		script(src='/js/view.js')
