--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -21,8 +21,8 @@ html
 				a.item.VisbyRoundCF.nav-logo ShaderStudio
 				a.active.item Home
 				a.item Browse
+				a.item Create
 				a.item Live
-				a.item New Shader
 				.item.ui.category.search
 					.ui.icon.input
 						input.prompt(type='text' placeholder='Search ShaderStudio')
@@ -55,8 +55,8 @@ html
 						a.item.VisbyRoundCF.nav-logo ShaderStudio
 						a.active.item Home
 						a.item Browse
+						a.item Create
 						a.item Live
-						a.item New Shader
 						.ui.category.search.item
 							.ui.icon.input
 								input.prompt(type='text', placeholder='Search ShaderStudio')
