--- a/public/css/index.less
+++ b/public/css/index.less
@@ -89,10 +89,16 @@
 	}
 }
 
-canvas.home {
+canvas#home {
 	position: absolute;
 	z-index: -1;
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+
+.toolkit {
+	position: absolute;
+	right: 4rem;
+	bottom: 4rem;
 }
