support sound pass

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -142,8 +142,8 @@ html
 							p
 								| Extra space for a call to action inside the footer that could help re-engage users.
 
-		script#glslPass(type='x-shader/x-vertex')
-			include glsl/pass.vert
+		script#glslVert(type='x-shader/x-vertex')
+			include glsl/vert.vert
 
 		script#glslImage(type='x-shader/x-fragment')
 			include glsl/image.frag
