--- a/public/css/index.less
+++ b/public/css/index.less
@@ -97,6 +97,11 @@ canvas#canvasImage {
 	height: 100%;
 }
 
+canvas#canvasSound {
+	width: 512px;
+	height: 512px;
+}
+
 .toolkit {
 	position: absolute;
 	right: 4rem;
