support sound pass

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -64,8 +64,7 @@ html
 							.results
 						.right.item
 							a.ui.inverted.button Login
-				canvas#canvasImage
-				canvas#canvasSound
+				canvas#canvas
 				.ui.text.container
 					h1.ui.inverted.header.VisbyRoundCF Shader Studio
 					h2.VisbyRoundCF Browse, create and share shader online!
