--- a/public/css/index.less
+++ b/public/css/index.less
@@ -89,17 +89,12 @@
 	}
 }
 
-canvas#canvasImage {
+canvas#canvas {
 	position: absolute;
 	z-index: -1;
 	left: 0;
 	width: 100%;
 	height: 100%;
-}
-
-canvas#canvasSound {
-	width: 512px;
-	height: 512px;
 }
 
 .toolkit {
