done index control

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -73,13 +73,13 @@ html
 						i.right.arrow.icon
 
 				.ui.icon.buttons.toolkit
-					button.ui.icon.inverted.button.share
+					button.ui.icon.inverted.button.share#share
 						i.share.alternate.icon
-					button.ui.icon.inverted.button.left
+					button.ui.icon.inverted.button.left#left
 						i.left.chevron.icon
-					button.ui.icon.inverted.button.pause
+					button.ui.icon.inverted.button.pause#control
 						i.pause.icon
-					button.ui.icon.inverted.button.right
+					button.ui.icon.inverted.button.right#right
 						i.right.chevron.icon
 
 			.ui.vertical.stripe.segment
@@ -156,7 +156,7 @@ html
 
 		script(src='/components/jquery/dist/jquery.min.js')
 		script(src='/components/semantic/dist/semantic.min.js')
-		script(src='/components/twgl.js/dist/twgl.js')
+		script(src='/components/twgl.js/dist/twgl.min.js')
 		srcipt(src='/js/common.js')
 		script(src='/js/render.js')
 		script(src='/js/index.js')
