--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -4,16 +4,16 @@ html
 		//- Standard Meta
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge, chrome=1')
-		meta(name='description' content='ShaderStudio - Search')
 		meta(name='renderer' content='webkit')
 		meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
 
 		//- Site Properties
 		title ShaderStudio - Browse, create and share shader online!
-		link(rel='stylesheet', href='/components/semantic/dist/semantic.min.css')
-		link(rel='stylesheet', href='/css/common.css')
-		link(rel='stylesheet', href='/css/index.css')
+		link(rel='stylesheet' href='/components/semantic/dist/semantic.min.css')
+		link(rel='stylesheet' href='/css/common.css')
+		link(rel='stylesheet' href='/css/index.css')
 		link(rel='icon' href='/img/favicon.ico')
+
 	body
 		//- Following Menu
 		.ui.large.top.fixed.hidden.menu
