--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -1,29 +1,37 @@
 doctype html
 html
 	head
+		//- Standard Meta
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge, chrome=1')
-		meta(name='description' content='ShaderStudio')
 		meta(name='renderer' content='webkit')
 		meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
-		title ShaderStudio - #{info.name}
-		link(rel='stylesheet', href='/components/semantic/dist/semantic.min.css')
-		link(rel='stylesheet', href='/css/view.css')
+
+		//- Site Properties
+		title ShaderStudio - #{shader.info.name}
+		link(rel='stylesheet' href='/components/semantic/dist/semantic.min.css')
+		link(rel='stylesheet' href='/css/common.css')
+		link(rel='stylesheet' href='/css/view.css')
 		link(rel='icon' href='/img/favicon.ico')
 
 	body
-		.ui.inverted.vertical.masthead.aligned.segment
+		.ui.inverted.vertical.masthead.segment.interactive
 			.ui.container
 				.ui.large.secondary.inverted.pointing.menu
 					a.toc.item
 						i.sidebar.icon
+					a.item.VisbyRoundCF.nav-logo ShaderStudio
 					a.active.item Home
-					a.item Work
-					a.item Company
-					a.item Careers
+					a.item Browse
+					a.item Create
+					a.item Live
+					.ui.category.search.item
+						.ui.icon.input
+							input.prompt(type='text', placeholder='Search ShaderStudio')
+							i.search.link.icon
+						.results
 					.right.item
-						a.ui.inverted.button Log in
-						a.ui.inverted.button Sign Up
+						a.ui.inverted.button Login
 
 			.ui.grid.container#content
 				.eight.wide.column#left
@@ -37,37 +45,43 @@ html
 						span 60FPS&nbsp;&nbsp;
 						i.maximize.icon
 					.row.note
-						h1 #{info.name}
+						h1 #{shader.info.name}
 					.row.float-right
 						i.unhide.icon
-						span #{info.viewed}&nbsp;&nbsp;
+						span #{shader.info.viewed}&nbsp;&nbsp;
 						i.heart.icon
-						span #{info.likes}
+						span #{shader.info.likes}
 					.row
-						p Tags: #{info.tags.join(', ')}
+						p Tags: #{shader.info.tags.join(', ')}
 					.row
-						p #{info.description}
+						p #{shader.info.description}
 					.row
-						p Uploaded by #{info.username} on #{new Date(info.date * 1000).toDateString()}
+						p Uploaded by #{shader.info.username} on #{new Date(shader.info.date).toDateString()}
 					br
 					br
 					.row Comments
 
 				.eight.wide.column#right
 					pre#editor
-						!{renderpass[0].code}
+						!{shader.renderpass[0].code}
 
-		script#vs(type='x-shader/x-vertex')
-			include glsl/pass.vert
-		script#fs(type='x-shader/x-fragment')
-			include glsl/head.frag
-			!{renderpass[0].code}
-			include glsl/foot.frag
-		script.input.
-			window.inputs = !{JSON.stringify(renderpass[0].inputs)}
+		script#glslVert(type='x-shader/x-vertex')
+			include glsl/vert.vert
+
+		script#glslImage(type='x-shader/x-fragment')
+			include glsl/image.frag
+
+		script#glslSound(type='x-shader/x-fragment')
+			include glsl/sound.frag
+
+		script.
+			window.shader = !{JSON.stringify(shader)}
+			window.config = !{JSON.stringify(config)}
 
 		script(src='/components/jquery/dist/jquery.min.js')
 		script(src='/components/semantic/dist/semantic.min.js')
-		script(src='/components/twgl.js/dist/twgl.js')
+		script(src='/components/twgl.js/dist/twgl.min.js')
 		script(src='/components/ace-builds/src-min/ace.js')
+		srcipt(src='/js/common.js')
+		script(src='/js/render.js')
 		script(src='/js/view.js')
