basic resume search

--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -15,7 +15,7 @@ html
 		link(rel='icon' href='/img/favicon.ico')
 
 	body
-		.ui.inverted.vertical.masthead.segment.interactive
+		.ui.inverted.vertical.masthead.aligned.segment.interactive
 			.ui.container
 				.ui.large.secondary.inverted.pointing.menu
 					a.toc.item
@@ -82,6 +82,5 @@ html
 		script(src='/components/semantic/dist/semantic.min.js')
 		script(src='/components/twgl.js/dist/twgl.min.js')
 		script(src='/components/ace-builds/src-min/ace.js')
-		srcipt(src='/js/common.js')
 		script(src='/js/render.js')
 		script(src='/js/view.js')
