--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -1,52 +1,64 @@
 doctype html
 html
 	head
+		//- Standard Meta
 		meta(charset='UTF-8')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge, chrome=1')
-		meta(name='description' content='ShaderStudio - Search')
 		meta(name='renderer' content='webkit')
 		meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
+
+		//- Site Properties
 		title ShaderStudio - Search
 		link(rel='stylesheet', href='/components/semantic/dist/semantic.min.css')
 		link(rel='stylesheet', href='/css/search.css')
 		link(rel='icon' href='/img/favicon.ico')
-		script.
-			window.inputs = []
+
 	body
-		.ui.inverted.vertical.masthead.aligned.segment
+		.ui.inverted.vertical.masthead.aligned.segment.interactive
 			.ui.container
 				.ui.large.secondary.inverted.pointing.menu
 					a.toc.item
 						i.sidebar.icon
+					a.item.VisbyRoundCF.nav-logo ShaderStudio
 					a.active.item Home
-					a.item Work
-					a.item Company
-					a.item Careers
+					a.item Browse
+					a.item Create
+					a.item Live
+					.ui.category.search.item
+						.ui.icon.input
+							input.prompt(type='text', placeholder='Search ShaderStudio')
+							i.search.link.icon
+						.results
 					.right.item
-						a.ui.inverted.button Log in
-						a.ui.inverted.button Sign Up
+						a.ui.inverted.button Login
 
 			.ui.container#content
 				.ui.four.column.grid
 					each shader, index in shaders
 						.four.wide.column.scene
-							canvas.canvas
-							script(id ="fs#{index}" type='x-shader/x-fragment')
-								include glsl/head.frag
-								!{shader.renderpass[0].code}
-								include glsl/foot.frag
-							script.input.
-								window.inputs[#{index}] = !{JSON.stringify(shader.renderpass[0].inputs)}
+							a(href="/view/#{shader.info.id}")
+								canvas.canvas
 							p "#{shader.info.name}" by #{shader.info.username}
 							i.unhide.icon
 							span #{shader.info.viewed}&nbsp;&nbsp;
 							i.heart.icon
 							span #{shader.info.likes}
 
-		script#vs(type='x-shader/x-vertex')
-			include glsl/pass.vert
+		script#glslVert(type='x-shader/x-vertex')
+			include glsl/vert.vert
+
+		script#glslImage(type='x-shader/x-fragment')
+			include glsl/image.frag
+
+		script#glslSound(type='x-shader/x-fragment')
+			include glsl/sound.frag
+
+		script.
+			window.shaders = !{JSON.stringify(shaders)}
+			window.config = !{JSON.stringify(config)}
 
 		script(src='/components/jquery/dist/jquery.min.js')
 		script(src='/components/semantic/dist/semantic.min.js')
 		script(src='/components/twgl.js/dist/twgl.min.js')
+		script(src='/js/render.js')
 		script(src='/js/search.js')
