--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -21,7 +21,7 @@ html
 					a.toc.item
 						i.sidebar.icon
 					a.item.VisbyRoundCF.nav-logo ShaderStudio
-					a.active.item Home
+					a.item Home
 					a.item Browse
 					a.item Create
 					a.item Live
