--- a/public/css/common.less
+++ b/public/css/common.less
@@ -81,3 +81,21 @@
 .interactive {
 	z-index: 10;
 }
+
+.right1char {
+	margin-right: 0.5em;
+}
+.right1em {
+	margin-right: 1em;
+}
+
+.left1char {
+	margin-left: 0.5em;
+}
+.left1em {
+	margin-left: 1em;
+}
+
+.top1em {
+	margin-top: 1em;
+}
