--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -97,8 +97,9 @@ html
 							a.ui.huge.teal.animated.button
 								.visible.content Create a Shader
 								.hidden.content
-									span.right1char Now
-									i.right.arrow.icon
+									| Now
+									i.right.arrow.icon.left1char
+
 			.ui.vertical.stripe.quote.segment
 				.ui.equal.width.stackable.internally.celled.grid
 					.center.aligned.row
