--- a/public/css/common.less
+++ b/public/css/common.less
@@ -83,19 +83,19 @@
 }
 
 .right1char {
-	margin-right: 0.5em;
+	margin-right: 0.5rem !important;
 }
 .right1em {
-	margin-right: 1em;
+	margin-right: 1rem !important;
 }
 
 .left1char {
-	margin-left: 0.5em;
+	margin-left: 0.5rem !important;
 }
 .left1em {
-	margin-left: 1em;
+	margin-left: 1rem !important;
 }
 
 .top1em {
-	margin-top: 1em;
+	margin-top: 1rem !important;
 }
