--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -31,7 +31,7 @@ html
 					.right.item
 						a.ui.inverted.button Login
 
-			.ui.stackable.two.column.grid.container#control
+			.ui.stackable.two.column.grid.container.top1em
 				.eight.wide.column
 					span.right1em
 						i.sort.icon
@@ -62,6 +62,7 @@ html
 					.four.wide.column.scene
 						a(href="/view/#{shader.info.id}")
 							canvas.canvas
+							.ui.active.loader
 						p
 							span.ellipsis
 								| "#{shader.info.name}"
